# adhan-cli

./: Cargo.toml  README.md
src/: main.rs
src/api/: api.rs  error.rs  mod.rs  parsed.rs  responses.rs
src/cli/: cli.rs  mod.rs  ui.rs
